--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.4.1
+decouple==0.0.7
 Django==3.2.6
 django-crispy-forms==1.13.0
 django-widget-tweaks==1.4.9
 Pillow==8.3.1
+python-decouple==3.5
 pytz==2021.1
 sqlparse==0.4.1
